--- a/animated-bg/style.css
+++ b/animated-bg/style.css
@@ -1,8 +1,8 @@
 #particles-js{
-    width: 100%;
+    /*width: max-content;*/
     height: 100%;
-    background-position: 50% 50%;
+    /*background-position: 50% 50%;*/
     position: fixed;
-    z-index: -1;
-    background-color: #D50000;
+    /*z-index: -1;*/
+    /*background-color: #D50000;*/
 }
